# SelfQuery

./: .gitignore  README.md
PostgreSQL/: Basic.md  Transaction.md
Python/LangChain/: chain_basics.ipynb  hugging_face_langchain_setup.ipynb  main.ipynb  ollama_langchain_setup.ipynb  pyproject.toml  requirements.txt  vector_embedding_basics.ipynb
Python/LangChain/animal_chroma_db/: chroma.sqlite3
Python/LangChain/chroma_db/: chroma.sqlite3
Python/LangChain/src/: 0.1_timer_setup.ipynb  0.3_rich_console_setup.ipynb  3_chain_basics.ipynb  4_vector_embedding_basics.ipynb  5_loader_splitters_basic.ipynb  6_rag_pipline_basic.ipynb  chain_basics.ipynb  hugging_face_langchain_setup.ipynb  loader_splitters_basic.ipynb  logger_setup.ipynb  ollama_langchain_setup.ipynb  rich_console_setup.ipynb  vector_embedding_basics.ipynb
Python/PythonQuery/: Iterator.md  Parser.md  Regex.md
Python/Virtual Environment/: README.md  poetry-Command.md  poetry-command.md  poetry.md
Python/WebSrcapping/: README.md
Python/WebSrcapping/BeautifulSoup/: README.md  SelfQuery.md  day1.ipynb
Ubuntu/: KeyboardShortcut.md  notes.org  pre-installed-command.md
Web/: README.md
Web Tech/: README.md
Web Tech/CSS/Button/: circular.css  index.html
Web Tech/CSS/Card/: animated.css  index.html
Web Tech/CSS/Text/: gradient.css  index.html
