[project]
name = "chain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.9",
    "langchain>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "notebook>=7.4.7",
    "sentence-transformers>=5.1.1",
    "transformers>=4.56.2",
]
