[project]
name = "chain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "chromadb>=1.1.0",
    "dotenv==0.9.9",
    "faiss-cpu>=1.12.0",
    "gitpython>=3.1.45",
    "hf-xet==1.1.10",
    "huggingface-hub==0.35.3",
    "jupyter==1.1.1",
    "jupyterlab==4.4.9",
    "langchain==0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.30",
    "langchain-core==0.3.76",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface==0.3.1",
    "langchain-ollama==0.3.8",
    "langchain-text-splitters==0.3.11",
    "langsmith==0.4.31",
    "notebook==7.4.7",
    "pypdf>=6.1.1",
    "requests==2.32.5",
    "rich>=14.1.0",
    "sentence-transformers==5.1.1",
    "torch==2.8.0",
    "transformers==4.56.2"
]
